libxmp: update to 4.6.1

--- a/mingw-w64-libxmp/PKGBUILD
+++ b/mingw-w64-libxmp/PKGBUILD
@@ -3,11 +3,12 @@
 _realname=libxmp
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=4.6.0
+pkgver=4.6.1
 pkgrel=1
 pkgdesc="Libxmp is a library that renders module files to PCM data. (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+msys2_repository_url='https://github.com/libxmp/libxmp/'
 url="https://xmp.sourceforge.net/"
 license=('spdx:LGPL-2.1-or-later')
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
@@ -15,7 +16,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-autotools")
 optdepends=("${MINGW_PACKAGE_PREFIX}-unrar")
 source=("https://github.com/libxmp/libxmp/releases/download/libxmp-${pkgver}/libxmp-${pkgver}.tar.gz")
-sha256sums=('2d3c45fe523b50907e89e60f9a3b7f4cc9aab83ec9dbba7743eaffbcdcb35ea6')
+sha256sums=('af605e72c83b24abaf03269347e24ebc3fc06cd7b495652a2c619c1f514bc5cb')
 
 build() {
   cd "${_realname}-${pkgver}"
