--- a/mingw-w64-python-pynvim/PKGBUILD
+++ b/mingw-w64-python-pynvim/PKGBUILD
@@ -3,15 +3,16 @@
 _realname=pynvim
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=0.5.1
+pkgver=0.5.2
 pkgrel=1
 pkgdesc='Python client for Neovim (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
-url='https://github.com/neovim/pynvim'
 msys2_references=(
   'pypi: pynvim'
 )
+msys2_repository_url='https://github.com/neovim/pynvim'
+url='https://pynvim.readthedocs.io/'
 license=('spdx:Apache-2.0')
 depends=("${MINGW_PACKAGE_PREFIX}-python"
          "${MINGW_PACKAGE_PREFIX}-python-greenlet"
@@ -20,16 +21,10 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools")
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('ed99cbaf286998aad48564ae13d26933b9106fc5a917a719798d2f2b2b8683ae')
-
-prepare() {
-  cd "${srcdir}"
-  rm -rf "python-build-${MSYSTEM}" | true
-  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}"
-}
+sha256sums=('734a2432db8683519f58572617528ecb4a2f321bc7b27f034b3f9b2322c15615')
 
 build() {
-  cd "${srcdir}/python-build-${MSYSTEM}"
+  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
   ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
