--- a/mingw-w64-python-pyusb/PKGBUILD
+++ b/mingw-w64-python-pyusb/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=pyusb
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=1.2.1
-pkgrel=4
+pkgver=1.3.0
+pkgrel=1
 pkgdesc="USB access on Python (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -12,14 +12,14 @@ url='https://github.com/pyusb/pyusb'
 msys2_references=(
   'pypi: pyusb'
 )
-license=('BSD')
+license=('spdx:BSD-3-Clause')
 depends=("${MINGW_PACKAGE_PREFIX}-libusb"
          "${MINGW_PACKAGE_PREFIX}-python")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools-scm")
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('a4cc7404a203144754164b8b40994e2849fde1cfff06b08492f12fff9d9de7b9')
+sha256sums=('7e6de8ef79e164ced020d8131cd17d45a3cdeefb7afdaf41d7a2cbf2378828c3')
 
 prepare() {
   cd "${srcdir}/${_realname}-${pkgver}"
@@ -28,7 +28,6 @@ prepare() {
 }
 
 build() {
-  cd "${srcdir}"
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
 
   "${MINGW_PREFIX}"/bin/python setup.py build
