--- a/mingw-w64-python-spyder/PKGBUILD
+++ b/mingw-w64-python-spyder/PKGBUILD
@@ -4,7 +4,7 @@ _realname=spyder
 pkgbase=mingw-w64-python-${_realname}
 pkgname=${MINGW_PACKAGE_PREFIX}-python-${_realname}
 pkgver=6.0.3
-pkgrel=1
+pkgrel=2
 pkgdesc='The Scientific Python Development Environment (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64')
@@ -24,6 +24,7 @@ depends=(
     ${MINGW_PACKAGE_PREFIX}-python-cloudpickle
     ${MINGW_PACKAGE_PREFIX}-python-cookiecutter
     ${MINGW_PACKAGE_PREFIX}-python-diff-match-patch
+    ${MINGW_PACKAGE_PREFIX}-python-importlib-metadata
     ${MINGW_PACKAGE_PREFIX}-python-intervaltree
     ${MINGW_PACKAGE_PREFIX}-python-ipython
     ${MINGW_PACKAGE_PREFIX}-python-jedi
@@ -32,7 +33,6 @@ depends=(
     ${MINGW_PACKAGE_PREFIX}-python-keyring
     ${MINGW_PACKAGE_PREFIX}-python-jupyter-nbconvert
     ${MINGW_PACKAGE_PREFIX}-python-numpydoc
-    ${MINGW_PACKAGE_PREFIX}-python-paramiko
     ${MINGW_PACKAGE_PREFIX}-python-parso
     ${MINGW_PACKAGE_PREFIX}-python-pexpect
     ${MINGW_PACKAGE_PREFIX}-python-pickleshare
@@ -86,14 +86,14 @@ prepare() {
 
 build() {
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
-  ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
+  python -m build --wheel --skip-dependency-check --no-isolation
 }
 
 package() {
-  cd "${srcdir}/python-build-${MSYSTEM}"
+  cd "python-build-${MSYSTEM}"
 
   MSYS2_ARG_CONV_EXCL="--prefix=" \
-    ${MINGW_PREFIX}/bin/python -m installer --prefix=${MINGW_PREFIX} \
+    python -m installer --prefix=${MINGW_PREFIX} \
     --destdir="${pkgdir}" dist/*.whl
 
   install -Dm644 LICENSE.txt "${pkgdir}${MINGW_PREFIX}/share/licenses/python-${_realname}/LICENSE"
