--- a/mingw-w64-inkscape/PKGBUILD
+++ b/mingw-w64-inkscape/PKGBUILD
@@ -6,7 +6,7 @@ _realname=inkscape
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=1.4
-pkgrel=3
+pkgrel=4
 pkgdesc="Vector graphics editor using the SVG file format (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -76,6 +76,7 @@ source=("https://media.inkscape.org/dl/resources/file/${_realname}-${pkgver}.tar
         "inkscape-poppler-24.10.patch::https://gitlab.com/inkscape/inkscape/-/commit/22304ae8034d067670a9f95022083a75fac92b4c.patch"
         "inkscape-poppler-24.11.patch::https://gitlab.com/inkscape/inkscape/-/commit/0399372ec240d23e0e70548237a541f2b5bf0f34.patch"
         "inkscape-gobjectptr.patch::https://gitlab.com/inkscape/inkscape/-/commit/eb6dadcf1a5c660167ba43f3606c8e7cc6529787.patch"
+        "inkscape-poppler-24.12.patch::https://gitlab.com/inkscape/inkscape/-/commit/c9046810d899a408bfbd489aad91872b1203ee6d.patch"
         inkscape-1.0.1-unbundle.patch
         inkscape-1.0.1-install-layout.patch
         007-no-console-clang.patch)
@@ -83,6 +84,7 @@ sha256sums=('c59a85453b699addebcd51c1dc07684dd96a10c8aec716b19551db50562e13f5'
             'f2ce2d04cfd8b7db046c57cdc2fd4dc8d5946642f7d47b1d8b87ebc2cd6e8ccc'
             'ce742fe3c522508eb0faaa36076e13fca876de3bc42117ace0a1ecebda73d78d'
             '2c2e04d8524fb75e7758ba43742512ad66447ec0b56f28279f4679b96cd1425f'
+            '4ef1c47d41dc79c8dafc6816c1fbf8f5a5adf2b5f94f5b5c7a5fdd034d0b6fd7'
             '92387251c1740f1a57cde9e587cc673ef1600813617bd2c9db65598c324a24d4'
             '131b2e1190637df0554ef1ee8cf46440689584375c117d057ab47d5871c58128'
             'c49d38b7c1a66e4b40e1b75fb055b730eb863a67a74d899da6d4d6db6baedcec')
@@ -106,6 +108,7 @@ prepare() {
   apply_patch_with_msg \
     inkscape-poppler-24.10.patch \
     inkscape-poppler-24.11.patch \
+    inkscape-poppler-24.12.patch \
     inkscape-gobjectptr.patch \
     inkscape-1.0.1-unbundle.patch \
     inkscape-1.0.1-install-layout.patch \
