butler: update to 15.24.0

--- a/mingw-w64-butler/PKGBUILD
+++ b/mingw-w64-butler/PKGBUILD
@@ -3,16 +3,16 @@
 _realname=butler
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=15.21.0
+pkgver=15.24.0
 pkgrel=1
 pkgdesc='Command-line itch.io helper (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64')
 url="https://github.com/itchio/butler"
 license=('spdx:MIT')
-makedepends=("${MINGW_PACKAGE_PREFIX}-go" "git")
+makedepends=("${MINGW_PACKAGE_PREFIX}-cc" "${MINGW_PACKAGE_PREFIX}-go" "git")
 source=("https://github.com/itchio/butler/archive/v$pkgver/${_realname}-${pkgver}.tar.gz")
-sha256sums=('390c75e1a03d2667383df9b8ca5e01f44ee21cecc7d18e165d7439b73c3df447')
+sha256sums=('c229ce788365ca254fb92748b055ce7946703470147382c4dff66ef7f9e7fb04')
 
 build() {
   cd "${srcdir}/${_realname}-$pkgver"
