calceph: update to 4.0.4

--- a/mingw-w64-calceph/PKGBUILD
+++ b/mingw-w64-calceph/PKGBUILD
@@ -1,10 +1,11 @@
 _realname=calceph
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=4.0.3
+pkgver=4.0.4
 pkgrel=1
 pkgdesc='The CALCEPH Library is designed to access the binary planetary ephemeris files, such INPOPxx and JPL DExxx ephemeris files (mingw-w64)'
 url='https://www.imcce.fr/inpop/calceph'
+msys2_repository_url='https://gitlab.obspm.fr/imcce_calceph/calceph'
 license=('spdx:CECILL-C OR CECILL-B OR CECILL-2.1')
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -17,7 +18,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cmake"
              $([[ ${MINGW_PACKAGE_PREFIX} == *-clang-* ]] || echo "${MINGW_PACKAGE_PREFIX}-fc")
 )
 source=("https://www.imcce.fr/content/medias/recherche/equipes/asd/calceph/${_realname}-${pkgver}.tar.gz")
-sha256sums=('91d2cc58ecaeab31c480cf21cd7f856bf6532b19e04a22ace4260d07d6813d44')
+sha256sums=('20c9f0bd720c5cfe99a7b342babda3ff91428adfec9d55357b380b4a13205d60')
 
 build() {
  
