--- a/mingw-w64-python-pillow/PKGBUILD
+++ b/mingw-w64-python-pillow/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=pillow
 pkgbase=mingw-w64-python-pillow
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-pillow")
-pkgver=11.0.0
-pkgrel=2
+pkgver=11.1.0
+pkgrel=1
 provides=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}=${pkgver}"
           "${MINGW_PACKAGE_PREFIX}-python3-pillow=${pkgver}")
 conflicts=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}"
@@ -17,7 +17,7 @@ msys2_references=(
   'pypi: pillow'
   "cpe: cpe:/a:python:pillow"
 )
-license=('spdx:HPND')
+license=('spdx:MIT-CMU')
 url="https://github.com/python-pillow/Pillow/"
 pkgdesc="Python Imaging Library (PIL) fork Python3 version (mingw-w64)"
 depends=("${MINGW_PACKAGE_PREFIX}-freetype"
@@ -36,7 +36,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-tk")
 optdepends=("${MINGW_PACKAGE_PREFIX}-tk: for the ImageTK module")
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('72bacbaf24ac003fea9bff9837d1eedb6088758d41e100c1552930151f677739')
+sha256sums=('368da70808b36d73b4b390a8ffac11069f8a5c85f29eff1f1b01bcf3ef5b2a20')
 
 prepare() {
   rm -rf "python-build-${MSYSTEM}" | true
