mimalloc: update to 2.1.9 (#22991)

--- a/mingw-w64-mimalloc/PKGBUILD
+++ b/mingw-w64-mimalloc/PKGBUILD
@@ -1,14 +1,14 @@
 # Maintainer: Ranieri Althoff <ranisalt+aur@gmail.com>
-# Contributor (MSYS2): Rafal Brzegowy <rafal.brzegfowy@yahoo.com>
+# Contributor (MSYS2): Rafał Brzegowy <rafal.brzegfowy@yahoo.com>
 
 _realname=mimalloc
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=2.1.7
+pkgver=2.1.9
 pkgrel=1
 pkgdesc='General-purpose allocator with excellent performance characteristics (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 license=('spdx:MIT')
 url='https://github.com/microsoft/mimalloc'
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs")
@@ -16,7 +16,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja")
 source=("https://github.com/microsoft/${_realname}/archive/refs/tags/v${pkgver}.tar.gz")
-sha256sums=('0EED39319F139AFDE8515010FF59BAF24DE9E47EA316A315398E8027D198202D')
+sha256sums=('DD8FF701691F19BF4E225D42EF0D3D5E6CA0E03498EE4F044A0402E4697E4A20')
 
 build() {
   mkdir -p "${srcdir}/build-${MSYSTEM}" && cd "${srcdir}/build-${MSYSTEM}"
