--- a/mingw-w64-gimp/PKGBUILD
+++ b/mingw-w64-gimp/PKGBUILD
@@ -1,77 +1,90 @@
 # Maintainer: Alexey Pavlov <Alexpux@gmail.com>
 
 _realname=gimp
+_pkgversuffix=RC2
+_pkgver=3.0.0
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=2.10.38
-pkgrel=4
+pkgver=${_pkgver}${_pkgversuffix}
+pkgrel=1
 pkgdesc="GNU Image Manipulation Program (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64')
-url="https://www.gimp.org/"
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+url="https://www.gimp.org/downloads/devel/"
 msys2_repository_url="https://gitlab.gnome.org/GNOME/gimp"
 msys2_references=(
-  'archlinux: gimp'
-  'cpe: cpe:/a:gimp:gimp'
+  'aur: gimp-devel'
+  "cpe: cpe:/a:gimp:gimp"
 )
 license=('spdx:GPL-3.0-or-later AND LGPL-3.0-or-later')
-depends=("${MINGW_PACKAGE_PREFIX}-babl"
-         "${MINGW_PACKAGE_PREFIX}-curl"
-         "${MINGW_PACKAGE_PREFIX}-dbus-glib"
+provides=("${MINGW_PACKAGE_PREFIX}-gimp3")
+conflicts=(
+  "${MINGW_PACKAGE_PREFIX}-gimp3"
+  "${MINGW_PACKAGE_PREFIX}-gimp2"
+)
+replaces=("${MINGW_PACKAGE_PREFIX}-gimp3")
+depends=("${MINGW_PACKAGE_PREFIX}-aalib"
+         "${MINGW_PACKAGE_PREFIX}-appstream-glib"
+         "${MINGW_PACKAGE_PREFIX}-atk"
+         "${MINGW_PACKAGE_PREFIX}-babl"
+         "${MINGW_PACKAGE_PREFIX}-brotli"
+         "${MINGW_PACKAGE_PREFIX}-cairo"
+         "${MINGW_PACKAGE_PREFIX}-cfitsio"
          "${MINGW_PACKAGE_PREFIX}-drmingw"
          "${MINGW_PACKAGE_PREFIX}-gegl"
+         "${MINGW_PACKAGE_PREFIX}-gettext-runtime"
          "${MINGW_PACKAGE_PREFIX}-gexiv2"
          "${MINGW_PACKAGE_PREFIX}-ghostscript"
+         "${MINGW_PACKAGE_PREFIX}-gi-docgen"
+         "${MINGW_PACKAGE_PREFIX}-glib2"
          "${MINGW_PACKAGE_PREFIX}-glib-networking"
-         "${MINGW_PACKAGE_PREFIX}-gtk-update-icon-cache"
-         "${MINGW_PACKAGE_PREFIX}-gtk2"
-         "${MINGW_PACKAGE_PREFIX}-hicolor-icon-theme"
+         "${MINGW_PACKAGE_PREFIX}-graphviz"
+         "${MINGW_PACKAGE_PREFIX}-gtk3"
+         "${MINGW_PACKAGE_PREFIX}-headers-git"
          "${MINGW_PACKAGE_PREFIX}-iso-codes"
-         "${MINGW_PACKAGE_PREFIX}-jasper"
+         "${MINGW_PACKAGE_PREFIX}-json-c"
+         "${MINGW_PACKAGE_PREFIX}-json-glib"
          "${MINGW_PACKAGE_PREFIX}-lcms2"
-         "${MINGW_PACKAGE_PREFIX}-libexif"
+         "${MINGW_PACKAGE_PREFIX}-lensfun"
+         "${MINGW_PACKAGE_PREFIX}-libarchive"
          "${MINGW_PACKAGE_PREFIX}-libheif"
+         "${MINGW_PACKAGE_PREFIX}-libiff"
+         "${MINGW_PACKAGE_PREFIX}-libjxl"
+         "${MINGW_PACKAGE_PREFIX}-libilbm"
          "${MINGW_PACKAGE_PREFIX}-libmng"
          "${MINGW_PACKAGE_PREFIX}-libmypaint"
-         "${MINGW_PACKAGE_PREFIX}-librsvg"
+         "${MINGW_PACKAGE_PREFIX}-libspiro"
+         "${MINGW_PACKAGE_PREFIX}-libwebp"
          "${MINGW_PACKAGE_PREFIX}-libwmf"
+         "${MINGW_PACKAGE_PREFIX}-luajit"
+         "${MINGW_PACKAGE_PREFIX}-lua51-lgi"
+         "${MINGW_PACKAGE_PREFIX}-maxflow"
          "${MINGW_PACKAGE_PREFIX}-mypaint-brushes"
+         "${MINGW_PACKAGE_PREFIX}-omp"
          "${MINGW_PACKAGE_PREFIX}-openexr"
-         "${MINGW_PACKAGE_PREFIX}-openjpeg2"
+         "${MINGW_PACKAGE_PREFIX}-pango"
          "${MINGW_PACKAGE_PREFIX}-poppler"
-         $([[ ${MSYSTEM} == MINGW* ]] && echo \
-           "${MINGW_PACKAGE_PREFIX}-python2-pygtk"
-           "${MINGW_PACKAGE_PREFIX}-python2-gobject2")
+         "${MINGW_PACKAGE_PREFIX}-poppler-data"
+         "${MINGW_PACKAGE_PREFIX}-python-gobject"
+         "${MINGW_PACKAGE_PREFIX}-shared-mime-info"
+         "${MINGW_PACKAGE_PREFIX}-suitesparse"
+         "${MINGW_PACKAGE_PREFIX}-vala"
          "${MINGW_PACKAGE_PREFIX}-xpm-nox")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
-             "${MINGW_PACKAGE_PREFIX}-autotools"
-             $([[ ${MSYSTEM} == MINGW* ]] && echo "${MINGW_PACKAGE_PREFIX}-pygobject2-devel")
-             "${MINGW_PACKAGE_PREFIX}-gtk-doc"
-             "${MINGW_PACKAGE_PREFIX}-libjxl"
-             "intltool")
-optdepends=("${MINGW_PACKAGE_PREFIX}-libjxl: for JPEG XL support")
-source=(https://download.gimp.org/pub/gimp/v${pkgver%.*}/${_realname}-${pkgver}.tar.bz2
-        0001-find-directx-fix.patch
-        0002-python-m4.patch
-        0003-mingw-add-ModuleFileName-dir-to-PATH.patch
-        0004-replace-pygtk-codegen.patch
-        0005-fix-link-python-plugins.patch
-        0007-clang-rc-files-fix.patch
-        0008-avoid-incompatible-pointer-cast.patch::https://gitlab.gnome.org/GNOME/gimp/-/commit/24df4f1fc800f11e44c44f8036e7d8d7ee90b62a.patch
-        0009-build-fix-svg-pixbuf-loader-check-with-librsvg-2.59.patch
-        0010-fix-compatibility-with-libheif-1.18.0.patch
-        https://gitlab.gnome.org/GNOME/gimp/-/commit/13284c8953b43e349dc94a6c5bcc9dbf4e98533f.patch)
-sha256sums=('50a845eec11c8831fe8661707950f5b8446e35f30edfb9acf98f85c1133f856e'
-            'f7f9badc547f1a0317b95e012530db8df63b7c7038c9d9ff8d0b510c86f43439'
-            'ae9b6e8fa40fd471cb58f17454219abf531565b5fbaf616e5fc81b3869bbc4b5'
-            '682656d1f7ec70bfd3dd10eba3f8db8abb75c80e44933f8c09c730cea5aeb549'
-            '98b6212e669eb3a93877514ee6d3284cb3a44ae6d57b6ecb29de3a076db3dbd2'
-            '01651bb582b2120aae67752f6a28c0750ea690d46259d855e28f8b18da567bf5'
-            'f4f8258b352530b0f9dd1ebd4f4730125caa4d047ca17bf9e5180b52be19c117'
-            '49f8078b10bcd5fe98236e51a3272651f80be630ae97ab2ec9aa00bd9c7ef503'
-            '1a733dec028116e2d891a830e7935a84bde22a31fa58759bf43bdf751c77e3b8'
-            'e1787a1cfb796973a3d711db9dc60b7606126bfc4b8a4365d8d32b743c60c8c6'
-            '3d346b0d7cb9ab534501f5e1a5d543a54dc16bb16b884a2fc42382c6a5b82cbf')
+             "${MINGW_PACKAGE_PREFIX}-meson"
+             "${MINGW_PACKAGE_PREFIX}-gettext-tools"
+             "${MINGW_PACKAGE_PREFIX}-gobject-introspection"
+             $([[ ${CARCH} == i686 ]] || echo "${MINGW_PACKAGE_PREFIX}-libbacktrace")
+             "${MINGW_PACKAGE_PREFIX}-libxslt"
+             "${MINGW_PACKAGE_PREFIX}-qoi")
+source=("https://download.gimp.org/pub/gimp/v3.0/gimp-${_pkgver}-${_pkgversuffix}.tar.xz"
+        0001-clang-rc-files-fix.patch
+        0002-skip-test-env.patch
+        0003-dont-install-external-files.patch)
+sha256sums=('f4d2f96df180ce5543f8b2b35707b9bf11459f00f726ca73da2f406d686d9db7'
+            'f9e0c2fe6d602a5254e4e023a5cb1f66f0ba64c60df925676c2190283ae11747'
+            '3b7dc1dd42f858d0ef93874164686bdee47cc5e456e60c6d3a63c307244ad6d9'
+            '00ea605eef20f35f0d8ebb30020322d33c86846f9a156eec3b697289930568a8')
 
 apply_patch_with_msg() {
   for _patch in "$@"
@@ -82,70 +95,48 @@ apply_patch_with_msg() {
 }
 
 prepare() {
-  cd "${srcdir}/${_realname}-${pkgver}"
+  cd "gimp-${_pkgver}-${_pkgversuffix}"
   apply_patch_with_msg \
-    0001-find-directx-fix.patch \
-    0002-python-m4.patch \
-    0003-mingw-add-ModuleFileName-dir-to-PATH.patch \
-    0004-replace-pygtk-codegen.patch \
-    0005-fix-link-python-plugins.patch \
-    0007-clang-rc-files-fix.patch \
-    0008-avoid-incompatible-pointer-cast.patch \
-    0009-build-fix-svg-pixbuf-loader-check-with-librsvg-2.59.patch \
-    0010-fix-compatibility-with-libheif-1.18.0.patch \
-    13284c8953b43e349dc94a6c5bcc9dbf4e98533f.patch
-
-  sed -e "s|-Wl,-rpath '-Wl,\$\$ORIGIN/../lib'||g" -i app/Makefile.am
-
-  autoreconf -fiv
+    0001-clang-rc-files-fix.patch \
+    0002-skip-test-env.patch \
+    0003-dont-install-external-files.patch
 }
 
 build() {
-  mkdir -p "${srcdir}"/build-${MSYSTEM} && cd "${srcdir}"/build-${MSYSTEM}
+  CFLAGS+=" -Wno-incompatible-pointer-types" \
+  MSYS2_ARG_CONV_EXCL="--prefix=" \
+  meson setup \
+    --buildtype=plain \
+    --auto-features=enabled \
+    --prefix=${MINGW_PREFIX} \
+    -Daa=disabled \
+    -Dalsa=disabled \
+    -Dappdata-test=disabled \
+    -Dbug-report-url="https://github.com/msys2/MINGW-packages/issues" \
+    -Dcheck-update=no \
+    -Ddirectx-sdk-dir="${MINGW_PREFIX}" \
+    -Dgi-docgen=disabled \
+    -Dgudev=disabled \
+    -Dheadless-tests=disabled \
+    -Djavascript=disabled \
+    -Dlibunwind=false \
+    -Dlinux-input=disabled \
+    -Dxcursor=disabled \
+    "build-${MSYSTEM}" \
+    "gimp-${_pkgver}-${_pkgversuffix}"
 
-  declare -a _python
-  if [[ ${MSYSTEM} == MINGW* ]]; then
-    _python=("--enable-python")
-    export PYTHON="${MINGW_PREFIX}/bin/python2"
-  else
-    _python=("--disable-python")
-  fi
-
-  CFLAGS+=" -Wno-error=int-conversion" CXXFLAGS+=" -Wno-error=int-conversion" \
-  ../${_realname}-${pkgver}/configure \
-    --prefix="${MINGW_PREFIX}" \
-    --build=${MINGW_CHOST} \
-    --host=${MINGW_CHOST} \
-    --target=${MINGW_CHOST} \
-    --sysconfdir="${MINGW_PREFIX}"/etc \
-    --enable-mp \
-    --enable-gimp-console \
-    "${_python[@]}" \
-    --without-aa \
-    --with-pdbgen \
-    --with-directx-sdk="${MINGW_PREFIX}"/${MINGW_CHOST} \
-    --without-x \
-    --without-webkit \
-    INTLTOOL_PERL="/usr/bin/perl.exe"
-
-  # V=1 because of a race condition (a generated 'bin2c' type
-  # file ending up truncated once). This might avoid it.
-  make V=1
+  meson compile -C "build-${MSYSTEM}"
 }
 
 package() {
-  cd "${srcdir}"/build-${MSYSTEM}
-  make DESTDIR="${pkgdir}" install
+  meson install -C "build-${MSYSTEM}" --destdir="${pkgdir}"
 
-  ln -s gimptool-2.0 "${pkgdir}${MINGW_PREFIX}/bin/gimptool.exe"
-  if [[ ${MSYSTEM} == MINGW* ]]; then
-    sed -e "s|${MINGW_PREFIX}/bin/python2|python2w.exe|g" -i "${pkgdir}${MINGW_PREFIX}"/lib/gimp/2.0/interpreters/pygimp.interp
-  fi
-  rm -f "${pkgdir}${MINGW_PREFIX}/lib/*.def"
-  rm -f "${pkgdir}${MINGW_PREFIX}/lib/gimp/2.0/modules/*.dll.a"
+  # Adjust the python interpreter path
+  sed -e "s|\=.*|\=python3w.exe|g" -i "${pkgdir}${MINGW_PREFIX}"/lib/gimp/3.0/interpreters/pygimp.interp
+  sed -e "s|::python3|::python3w.exe|g" -i "${pkgdir}${MINGW_PREFIX}"/lib/gimp/3.0/interpreters/pygimp.interp
 
-  cp -p "${pkgdir}${MINGW_PREFIX}/bin/gimp-${pkgver%.*}.exe" "${pkgdir}${MINGW_PREFIX}/bin/gimp.exe"
+  rm -f "${pkgdir}${MINGW_PREFIX}/lib/gimp/3.0/modules/*.dll.a"
 
-  install -Dm644 "${srcdir}/${_realname}-${pkgver}/LICENSE" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE"
-  install -Dm644 "${srcdir}/${_realname}-${pkgver}/COPYING" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/COPYING"
+  install -Dm644 "gimp-${_pkgver}-${_pkgversuffix}/LICENSE" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE"
+  install -Dm644 "gimp-${_pkgver}-${_pkgversuffix}/COPYING" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/COPYING"
 }
