plfit: update to 1.0.1

--- a/mingw-w64-plfit/PKGBUILD
+++ b/mingw-w64-plfit/PKGBUILD
@@ -3,11 +3,11 @@
 _realname=plfit
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=0.9.6
+pkgver=1.0.1
 pkgrel=1
 pkgdesc='Fitting power-law distributions to empirical data (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'archlinux: plfit'
 )
@@ -19,7 +19,7 @@ makedepends=(
   "${MINGW_PACKAGE_PREFIX}-ninja"
 )
 source=("${_realname}-${pkgver}.tar.gz::https://github.com/ntamas/plfit/archive/refs/tags/${pkgver}.tar.gz")
-sha256sums=('b44e592c1b96abff1255a4d67bee52cfe2a6414f975fb42fc3ffd2547bc8a535')
+sha256sums=('523868c283f334329084df457739baf29b0a21e679830e5326965b0d128db1d4')
 
 build() {
   declare -a _extra_config
@@ -30,7 +30,7 @@ build() {
   fi
 
   MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
-    "${MINGW_PREFIX}"/bin/cmake.exe \
+    cmake \
       -GNinja \
       -DCMAKE_INSTALL_PREFIX="${MINGW_PREFIX}" \
       "${_extra_config[@]}" \
@@ -38,10 +38,10 @@ build() {
       -S "${_realname}-${pkgver}" \
       -B "build-${MSYSTEM}-static"
 
-  "${MINGW_PREFIX}"/bin/cmake.exe --build "build-${MSYSTEM}-static"
+  cmake --build "build-${MSYSTEM}-static"
 
   MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
-    "${MINGW_PREFIX}"/bin/cmake.exe \
+    cmake \
       -GNinja \
       -DCMAKE_INSTALL_PREFIX="${MINGW_PREFIX}" \
       -DCMAKE_DLL_NAME_WITH_SOVERSION=ON \
@@ -50,19 +50,19 @@ build() {
       -S "${_realname}-${pkgver}" \
       -B "build-${MSYSTEM}-shared"
 
-  "${MINGW_PREFIX}"/bin/cmake.exe --build "build-${MSYSTEM}-shared"
+  cmake --build "build-${MSYSTEM}-shared"
 }
 
 check() {
-  "${MINGW_PREFIX}"/bin/ctest.exe --test-dir "build-${MSYSTEM}-static" || warning "Tests failed"
+  ctest --test-dir "build-${MSYSTEM}-static" || warning "Tests failed"
 
   PATH=$PWD/build-MINGW64-shared/src:$PATH \
-    "${MINGW_PREFIX}"/bin/ctest.exe --test-dir "build-${MSYSTEM}-shared" || warning "Tests failed"
+    ctest --test-dir "build-${MSYSTEM}-shared" || warning "Tests failed"
 }
 
 package() {
-  DESTDIR="${pkgdir}" "${MINGW_PREFIX}"/bin/cmake.exe --install "build-${MSYSTEM}-static"
-  DESTDIR="${pkgdir}" "${MINGW_PREFIX}"/bin/cmake.exe --install "build-${MSYSTEM}-shared"
+  DESTDIR="${pkgdir}" cmake --install "build-${MSYSTEM}-static"
+  DESTDIR="${pkgdir}" cmake --install "build-${MSYSTEM}-shared"
 
-  install -Dm644 "${srcdir}/${_realname}-${pkgver}/LICENSE" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE"
+  install -Dm644 "${_realname}-${pkgver}/LICENSE" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE"
 }
