--- a/mingw-w64-libshumate/PKGBUILD
+++ b/mingw-w64-libshumate/PKGBUILD
@@ -4,7 +4,7 @@ _realname=libshumate
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
          "${MINGW_PACKAGE_PREFIX}-${_realname}-docs")
-pkgver=1.3.0
+pkgver=1.3.1
 pkgrel=1
 pkgdesc='GTK toolkit providing widgets for embedded maps (mingw-w64)'
 arch=('any')
@@ -13,7 +13,7 @@ msys2_references=(
   'archlinux: libshumate'
 )
 msys2_repository_url="https://gitlab.gnome.org/GNOME/libshumate/"
-url='https://wiki.gnome.org/Projects/libshumate'
+url='https://gnome.pages.gitlab.gnome.org/libshumate'
 license=('spdx:LGPL-2.1-or-later')
 depends=("${MINGW_PACKAGE_PREFIX}-cairo"
          "${MINGW_PACKAGE_PREFIX}-gdk-pixbuf2"
@@ -36,9 +36,8 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-vala")
 source=("https://download.gnome.org/sources/${_realname}/${pkgver:0:3}/${_realname}-${pkgver}.tar.xz"
         0001-meson-fix-static-lib-install.patch)
-sha256sums=('8227a6e8281cde12232894fef83760d44fa66b39ef033c61ed934a86c6dc75d4'
+sha256sums=('6efe9352d91744822d41ead4714a2ab4b378481a86a2204b7bec4082dffc1b8b'
             '553222ef0b3dcc42d78884070e7d5945624a4ca19216a6f847123e6381b49dc1')
-msys2_repository_url="https://gitlab.gnome.org/GNOME/libshumate"
 
 prepare() {
   cd "${_realname}-${pkgver}"
@@ -58,7 +57,7 @@ build() {
   CFLAGS+=" ${_static_flags[@]}" \
   CXXFLAGS+=" ${_static_flags[@]}" \
   MSYS2_ARG_CONV_EXCL="--prefix=" \
-    ${MINGW_PREFIX}/bin/meson.exe setup \
+    meson setup \
       --prefix="${MINGW_PREFIX}" \
       --wrap-mode=nodownload \
       --auto-features=enabled \
@@ -70,10 +69,10 @@ build() {
       "build-${MSYSTEM}-static" \
       "${_realname}-${pkgver}"
 
-  ${MINGW_PREFIX}/bin/meson.exe compile -C "build-${MSYSTEM}-static"
+  meson compile -C "build-${MSYSTEM}-static"
 
   MSYS2_ARG_CONV_EXCL="--prefix=" \
-    ${MINGW_PREFIX}/bin/meson.exe setup \
+    meson setup \
       --prefix="${MINGW_PREFIX}" \
       --wrap-mode=nodownload \
       --auto-features=enabled \
@@ -83,17 +82,17 @@ build() {
       "build-${MSYSTEM}-shared" \
       "${_realname}-${pkgver}"
 
-  ${MINGW_PREFIX}/bin/meson.exe compile -C "build-${MSYSTEM}-shared"
+  meson compile -C "build-${MSYSTEM}-shared"
 }
 
 package_libshumate() {
-  ${MINGW_PREFIX}/bin/meson.exe install -C "${srcdir}/build-${MSYSTEM}-static" --destdir "${pkgdir}"
-  ${MINGW_PREFIX}/bin/meson.exe install -C "${srcdir}/build-${MSYSTEM}-shared" --destdir "${pkgdir}"
+  meson install -C "build-${MSYSTEM}-static" --destdir "${pkgdir}"
+  meson install -C "build-${MSYSTEM}-shared" --destdir "${pkgdir}"
 
   mkdir -p dest${MINGW_PREFIX}/share
   mv "${pkgdir}${MINGW_PREFIX}"/share/doc dest${MINGW_PREFIX}/share/doc
 
-  install -Dm644 "${srcdir}/${_realname}-${pkgver}/COPYING" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/COPYING"
+  install -Dm644 "${_realname}-${pkgver}/COPYING" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/COPYING"
 }
 
 package_libshumate-docs() {
