corrosion: update to 0.5.1

--- a/mingw-w64-corrosion/PKGBUILD
+++ b/mingw-w64-corrosion/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=corrosion
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=0.5
+pkgver=0.5.1
 pkgrel=1
 pkgdesc="Tool for integrating Rust into an existing CMake project (mingw-w64)"
 arch=('any')
@@ -13,26 +13,26 @@ license=('spdx:MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-rust" "${MINGW_PACKAGE_PREFIX}-cmake")
 makedepends=("${MINGW_PACKAGE_PREFIX}-ninja")
 source=("${url}/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('d225753d54b482e04d2eb9e1a56f4b569d20dc70b00481dec279de1b5baa02f0')
+sha256sums=('843334a9f0f5efbc225dccfa88031fe0f2ec6fd787ca1e7d55ed27b2c25d9c97')
 
 build() {
   MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
-    "${MINGW_PREFIX}"/bin/cmake.exe \
+    cmake \
       -GNinja \
       -DCMAKE_INSTALL_PREFIX="${MINGW_PREFIX}" \
       -DCMAKE_INSTALL_LIBEXECDIR=lib \
       -S "${_realname}-${pkgver}" \
       -B "build-${MSYSTEM}"
 
-  "${MINGW_PREFIX}"/bin/cmake.exe --build "build-${MSYSTEM}"
+  cmake --build "build-${MSYSTEM}"
 }
 
 check() {
-  "${MINGW_PREFIX}"/bin/ctest.exe --test-dir "build-${MSYSTEM}" || warning "Tests failed"
+  ctest --test-dir "build-${MSYSTEM}" || warning "Tests failed"
 }
 
 package() {
-  DESTDIR="${pkgdir}" "${MINGW_PREFIX}"/bin/cmake.exe --install "build-${MSYSTEM}"
+  DESTDIR="${pkgdir}" cmake --install "build-${MSYSTEM}"
 
-  install -Dm644 "${srcdir}/${_realname}-${pkgver}/LICENSE" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE"
+  install -Dm644 "${_realname}-${pkgver}/LICENSE" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE"
 }
